css/style.css
body {
  background-color: rgb(61, 14, 14);
  color: whitesmoke;
  text-align: center;
  width: 100vw;
  height: 100vh;
  margin: 0;
}
#start {
  min-height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
#start button {
  margin: 0 10vw;
}
#game {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-wrap: wrap;
}
.grid {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: repeat(10, 1fr);
  width: 90vw;
  max-width: 90vh;
  height: 90vw;
  max-height: 90vh;
  margin: 0 auto;
  gap: 1px;
  margin-top: 2em;
}
.cell {
  background-color: gray;
  border: 1px solid black;
}
.cell.hit {
  background-color: rgb(43, 43, 43);
}
.cell.miss {
  background-color: rgb(47, 47, 213);
}
.cellOverlay {
  width: 100%;
  height: 100%;
}
.cellOverlay:hover {
  background-color: rgba(61, 14, 14, 0.6);
}
#info {
  background-color: rgba(0,0,0,.5);
  display: flex;
  align-items: center;
  padding: 2em;
  border-radius: 10px;
  border: 5px solid rgba(0,0,0,.5);
}
#credits button {
  padding: 0 10vw;
}

